# opengl-learning

./: .gitignore  3rd.cmake  CMakeLists.txt  platform.cmake
include/: Camera.h  GLDefine.h  GLRenders.h  GLShaders.h  LearnGL.h  Mesh.h  Model.h  Program.h  Texture.h  UniformAttribute.h
shaders/: base.fs  base.vs  crayon.fs  crayon.vs  cute.fs  cute.vs  learn.fs  learn.vs  light.fs  light.vs  mesh.fs  mesh.vs
src/: GLRenders.cpp  GLShaders.cpp  LearnGL.cpp  Mesh.cpp  Model.cpp  Texture.cpp  UniformAttribute.cpp  main.cpp
